site/media/css/main.css
/*
 * Reset styles from html5boilerplate.com
 */
html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }

/**
 * Font normalization inspired by YUI Library's fonts.css: developer.yahoo.com/yui/
 */

body { font:13px/1.231 sans-serif; *font-size:small; } /* Hack retained to preserve specificity */
select, input, textarea, button { font:99% sans-serif; }

/* Normalize monospace sizing:
   en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome */
pre, code, kbd, samp { font-family: monospace, sans-serif; }

/**
 * Minimal base styles.
 */

/* Always force a scrollbar in non-IE */
html { overflow-y: scroll; }

/* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
a:hover, a:active { outline: none; }

pre {
  /* www.pathf.com/blogs/2008/05/formatting-quoted-code-in-blog-posts-css21-white-space-pre-wrap/ */
  white-space: pre; white-space: pre-wrap; word-wrap: break-word;
  padding: 15px;
}

textarea { overflow: auto; } /* www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/ */

/* Webkit browsers add a 2px margin outside the chrome of form elements */
button, input, select, textarea { margin: 0; }

/*
 * End of html5boilerplate CSS; start of privacypatterns CSS
 * 
 * Modular scale:
 * Lora, 14px * 1.618
 * http://modularscale.com/scale/?px1=14&px2=&ra1=1.618&ra2=0
 */

body {
  margin: 22px 155px 22px 95px;
}

#container {
  max-width: 1064px;
  min-width: 658px;
}

header {
  border-bottom: 2px solid #42599E; /*  #2a3d65; */
}

/* Headers (h1, h2, etc) have no default font-size or margin; define those yourself */
h1, h2, h3, h4, h5, h6 {
  font-family: 'Helvetica Neue Light', 'HelveticaNeue-Light', 'News Cycle', sans-serif;
  margin-bottom: .3em;
}

h1 { font-size: 50px; }
h2 { font-size: 36px; }
h3 { font-size: 22px; }
h4 { font-size: 18px; font-style: italic; }
h5 { font-size: 16px; }
h6 { font-size: 14px; font-weight: bold; }

em { font-weight: bold; }

a { color: #42599E; }
a:hover { text-decoration: none; }
/* Used on specific category pages, e.g. "notice" */
h1 a { color: black; }

#logo {
  display: inline-block;
  font-family: 'Cuprum', serif;
  font-size: 42px;
  width: 62%;
}
#logo a { color: inherit; text-decoration: none; }
#logo a:hover { text-decoration: none; }

#index #logo { font-size: 59px; } /* lessen on every page but home */

.highlight { color: #42599E; }

nav {
  display: inline-block;
  padding-top: 10px;
  text-align: right;
  vertical-align: top;
  width: 37%;
}

nav { color: #444; }
nav li { display: inline-block; }
nav a {
  color: #444;
  font-size: 15px;
}
nav a:hover { text-decoration: none; }

#main { margin-top: 22px; padding-bottom: 22px; }

#content {
  color: #222;
  display: inline-block;
  font-family: 'Lora', serif;
  width: 80%;
}

footer {
  border-top: 1px solid #444;
  padding: 1em 0;
  text-align: center;
}

footer, footer a {
  color: #444;
}

p.berkeley {
	font-family: 'UC Berkeley OS';
	font-size: 20px;
}

#iman {
	margin-bottom: -8px;
	padding: 0 3px;
}

#content p, #content ul {
  font-size: 14px;
  line-height: 1.5em;
  margin-bottom: 1.2em;
}

#content ul {
  list-style-position: inside;
  margin-left: 1.2em;
}

#content .byline, #content .byline a, #content .byline a:visited {
  color: #666;
  font-family: sans-serif;
  font-size: 11px;
  text-transform: uppercase;
}

#content .byline a:hover { text-decoration: none; }

#sidebar {
  display: inline-block;
  vertical-align: top;
  width: 18%;
}

#sidebar h2 {
  font-size: 22px;
}

#categories {
  list-style-position: inside;
  margin: 0;
  padding: 0;
}

#categories li {
  line-height: 1.6em;
  text-transform: capitalize;
}

.category { text-transform: capitalize; }

/*
 * List of patterns
 */
#patterns_listing li {
  border: 2px solid #efefef;
  -moz-border-radius: 8px;
  border-radius: 8px;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  display: inline-block;
  list-style: none;
  margin: 0 14px 14px 0;
  width: 30%;
  vertical-align: top;
}
/* #content is only 60% of the page, so lists should be 2 wide */
#content #patterns_listing li { width: 45%; }

#patterns_listing a {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: black;
  display: block;
  height: 100%;
  padding: 14px;
  text-decoration: none;
  width: 100%;
}

#patterns_listing a:hover {
  background-image: -webkit-gradient(
      linear,
      left bottom,
      left top,
      color-stop(0.92, rgb(255,255,255)),
      color-stop(1, rgb(239,239,239))
  );
  background-image: -moz-linear-gradient(
      center bottom,
      rgb(255,255,255) 92%,
      rgb(239,239,239) 100%
  );
  background-image: linear-gradient(
    center bottom,
    rgb(255,255,255) 92%,
    rgb(239,239,239) 100%
  );
}
#patterns_listing a:hover h3 { color: #2A3D65; }

#patterns_listing h3 {
  font-size: 22px;
}

#patterns_listing p { font-family: 'Lora', serif; }

/* Pattern table of contents */
#toc {
  border-left: 1px dotted #666;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  display: inline-block;
  float: right;
  margin-top: 100px;
  padding: 1em 0 1em 2em;
  width: 33%;
  vertical-align: top;
}

#toc ol {
  list-style-position: outside;
  margin: 0;
  padding: 0;
  padding-left: 2em;
}

#toc li { padding-bottom: .5em; }

#toc, #toc a {
  color: #666;
}

#toc h2 {
  color: black;
  font-family: sans-serif;
  font-size: 22px;
  text-indent: 1em;
}

ol { list-style-type: upper-roman; }
ol ol { list-style-type: upper-alpha; }
ol ol ol { list-style-type: lower-roman; }
ol ol ol ol { list-style-type: lower-alpha; }

/* 
 * Homepage specific styles
 */
#index #content { width: 60%; }
/* Button */
#index #sidebar {
  margin-top: 36px;
  text-align: center;
  width: 39%;
  white-space: nowrap;
}

#lib_button {
  background-color: #2A3D65;
  background-image: -webkit-linear-gradient(#395289, #2A3D65);
  background-image: -moz-linear-gradient(#395289, #2A3D65);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#395289, endColorstr=#2A3D65);
  zoom: 1;
  background-image: linear-gradient(#395289, #2A3D65);
  border: 2px solid #395289;
  border-radius: 14px;
  color: white;
  font-family: 'Helvetica Neue Light', 'HelveticaNeue-Light', sans-serif;
  font-size: 30px;
  padding: .25em .5em;
  text-decoration: none;
  text-shadow: 0 2px 1px black;
}
#lib_button:hover {
  background-image: -webkit-linear-gradient(#5675B8, #2A3D65);
  background-image: -moz-linear-gradient(#5675B8, #2A3D65);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#5675B8, endColorstr=#2A3D65);
  background-image: linear-gradient(#5675B8, #2A3D65);
}

/* This CSS may be brittle, consider making custom template instead */
#index #logo {
  left: 0;
  position: absolute;
  text-align: center;
  top: 36px; /* place it below the header */
  width: 100%;
}

#index header { border-bottom: none; }

#index nav {
  display: block;
  padding-top: 0;
  width: auto;
}

#index #main, #index footer {
  position: relative;
  top: 70px;
}

#index h2 {
  font-size: 22px;
  margin: 1.6em 0 1em 0;
}

